--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ deploy:
     bucket: spring-boot-project-build # s3 버킷 명
     region: ap-northeast-2
     skip_cleanup: true
-    acl: private # zip 접근 private ㅇ
+    acl: private # zip 접근 private
 
     local_dir: deploy # before_deploy에서 생성한 디렉토리
     wait-until-deployed: true
@@ -47,7 +47,7 @@ deploy:
     secret_access_key: $AWS_SECRET_KEY # travis에서 설정된 변수
 
     bucket: spring-boot-project-build # s3 버킷 명
-    key: spring-boot-project-build.zip # 빌드파일 압축해서 전달
+    key: spring-boot-project.zip # 빌드파일 압축해서 전달
 
     bundle_type: zip # 압축 확장자
     application: spring-boot-project #웹 콘솔에서 등록한 codeDeploy 앱 이름
