--- a/.travis.yml
+++ b/.travis.yml
@@ -24,10 +24,13 @@ notifications:
       - "jylim@bsks.ac.kr"
 
 before_deploy:
-#  - 현재 모든 파일을 압축
-  - zip -r spring-boot-project *
-  - mkdir -p deploy
-  - mv spring-boot-project.zip deploy/spring-boot-project.zip
+  - mkdir -p before-deploy # zip에 포함시킬 파일들을 담을 DIR 생성
+  - cp scripts/*.sh before-deploy/
+  - cp appspec.yml before-deploy/
+  - cp build/libs/*.jar before-deploy/
+  - cd before-deploy && zip -r before-deploy * # before-deploy로 이동 후 전체 압축
+  - cd ../ && mkdir -p deploy # 상위 디랙토리 이동 후 deploy 디렉토리 생성
+  - mv before-deploy/before-deploy.zip deploy/spring-boot-project.zip # deploy로 zip 파일 이동
 
 deploy:
   - provider: s3
