v1 배포 ( 외부 환경설정 파일 적용 6) , build.gradle에 maifest 추가

--- a/build.gradle
+++ b/build.gradle
@@ -31,3 +31,7 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+// 메인클래스 추가
+manifest {
+    attributes 'Main-Class': 'com.example.ec2project.Ec2ProjectApplication'
+}
